--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -620,3 +620,18 @@ pre tt:after {
     font-size: 100%;
   }
 }
+.main__div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.nav__part {
+  flex: 1 0 30%;
+  padding: 0 0 0 30rem;
+}
+
+.main__part {
+  flex: 1 0 80%;
+}
