--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -6,7 +6,6 @@ li {
     
 .nav {
   height: 100%;
-  display: flex;
   margin: 0;
 }
 
@@ -16,6 +15,12 @@ li {
 
 .nav__list {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-right: 1.45rem;
+  margin-left: 0.8rem;
 }
 
 .nav__list > li {
