--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,6 +1,5 @@
 li {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: Arial;
   padding: 15px 0px 15px 30px;
 }
 
