--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -11,6 +11,7 @@ ul {
   height: 100%;
   margin: 0;
   margin-right: 1.8rem;
+  margin-bottom: 0.8rem;
   border: 3px solid #121210;
   border-radius: 5%;
   box-shadow: 5px 10px #121210;
