--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,16 +1,29 @@
 li {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: Arial;
   padding: 15px 0px 15px 30px;
 }
-    
+
+ul {
+  margin: 0px;
+}
+
 .nav {
   height: 100%;
   margin: 0;
+  margin-right: 1.8rem;
+  margin-bottom: 0.8rem;
+  border: 3px solid #121210;
+  border-radius: 5%;
+  box-shadow: 5px 10px #121210;
 }
 
 .nav__link {
   text-decoration: none;
+  color: #121210,
+}
+
+.nav__link:visited {
+  color: #121210;
 }
 
 .nav__list {
@@ -19,8 +32,6 @@ li {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-right: 1.45rem;
-  margin-left: 0.8rem;
 }
 
 .nav__list > li {
