--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -628,26 +628,27 @@ pre tt:after {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 0px #F6EACE; 
+  box-shadow: inset 0 0 0px #f6eace;
   border-radius: 1px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #E9ADA7; 
+  background: #e9ada7;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #E9ADA7; 
+  background: #e9ada7;
 }
 
-.main__div {
+.main__content {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
+  min-width: 100vh-100px;
 }
 
 .nav__part {
@@ -656,5 +657,13 @@ pre tt:after {
 }
 
 .main__part {
-  flex: 1 0 80%;
+  flex: 70%;
+  max-width: 63%;
+}
+
+@media only screen and (max-width: 1100px) {
+  .main__part {
+    flex: 70%;
+    max-width: 100%;
+  }
 }
